r3hub-iac/aws/1_foundation/sg.tf
##################################################################################
# RESOURCES - SECURITY GROUPS
##################################################################################

resource "aws_security_group" "allow_ssh" {
  name        = "nginx_demo"
  description = "Allow ports for ssh connection"
  vpc_id      = aws_default_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
